TestSuite/errors/err0331.pas
type Foo = (One, Two, Three, Four);
begin
  print(Foo.One.Two.Three.Four.Four.Two.One);
end.